--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,18 @@
         android:theme="@style/Theme.Beam"
         tools:targetApi="31">
         <activity
+            android:name=".activities.UserProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.RequestPreviewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.RequestResponseActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.NewRequestActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.SettingActivity"
             android:exported="false" />
         <activity
