--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 agp = "8.5.2"
 ccp = "2.7.0"
 circleimageview = "3.1.0"
+imagepicker = "2.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
@@ -18,6 +19,7 @@ volley = "1.2.1"
 [libraries]
 ccp = { module = "com.hbb20:ccp", version.ref = "ccp" }
 circleimageview = { module = "e.hdodenhof:circleimageview", version.ref = "circleimageview" }
+imagepicker = { module = "com.github.dhaval2404:imagepicker", version.ref = "imagepicker" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
