--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,6 @@
 [versions]
 agp = "8.5.2"
 ccp = "2.7.0"
-circleimageview = "3.1.0"
 gson = "2.10.1"
 imagepicker = "2.1"
 junit = "4.13.2"
@@ -12,15 +11,14 @@ material = "1.12.0"
 activity = "1.9.1"
 constraintlayout = "2.1.4"
 glide = "4.16.0"
-#stash = "1.3.2"
 playServicesLocation = "21.3.0"
 playServicesMaps = "19.0.0"
+speech = "1.6.2"
 volley = "1.2.1"
 simpleratingbar = "0.1.5"
 
 [libraries]
 ccp = { module = "com.hbb20:ccp", version.ref = "ccp" }
-circleimageview = { module = "e.hdodenhof:circleimageview", version.ref = "circleimageview" }
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 imagepicker = { module = "com.github.dhaval2404:imagepicker", version.ref = "imagepicker" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -30,10 +28,10 @@ appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "a
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
-#stash = { module = "com.fxn769:stash", version.ref = "stash" }
 play-services-location = { module = "com.google.android.gms:play-services-location", version.ref = "playServicesLocation" }
 play-services-maps = { module = "com.google.android.gms:play-services-maps", version.ref = "playServicesMaps" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
+speech = { module = "net.gotev:speech", version.ref = "speech" }
 volley = { module = "com.android.volley:volley", version.ref = "volley" }
 simpleratingbar = { module = "com.iarcuschin:simpleratingbar", version.ref = "simpleratingbar" }
 
